# regime-switching-daa-paper

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  Statistics.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
assets/: annualized_metrics.md  break_even_costs.md  churning_stats.md  classification_metrics.md  crisis_performance.md  data_quality_report.md  depletion_rate_ci.md  eda_adf_tests.md  eda_descriptive_stats.md  evaluation_table.md  feature_correlation_table.md  h1_drawdown_test.md  h2_transformer_test.md  mcs_summary.md  optuna_best_params.md  optuna_importance_values.json  performance_summary.md  pipeline_timing.md  sorr_summary.md  switch_timing.md  threshold_sensitivity_HMM.md  threshold_sensitivity_HMM_Uni.md  threshold_sensitivity_LSTM.md  threshold_sensitivity_MSM.md  threshold_sensitivity_Transformer.md  time_to_recovery_Buy_Hold.md  time_to_recovery_HMM.md  time_to_recovery_HMM_Uni.md  time_to_recovery_LSTM.md  time_to_recovery_MSM.md  time_to_recovery_Transformer.md  withdrawal_sensitivity.md
config/: config.yaml  config_loader.py
docs/: dashboard-service.md  data-architecture.md  fastapi-endpoints.md  how-to-add-ml-model.md  index.md  jupyter-sequence-diagram.md  limitations.md  microservice-architecture.md  microservice-sequence-diagram.md  sequence-diagram.md  statistics.md  transformer-architecture-diagram.md
jupyter/: .~03_regime_switching_models.ipynb  00_dependencies.ipynb  01_data_preprocessing.ipynb  01a_label_analysis.ipynb  02_feature_engineering.ipynb  03_regime_switching_models.ipynb  03a_hyperparameter_optimization.ipynb  04_backtesting.ipynb  05_evaluation.ipynb  99_statistics_md.ipynb  Asymmetric_correlation_Ang_Chen.ipynb  Concept_matrix_venn.ipynb  Hypothesis_testing.ipynb  Model_risk-return-positioning.ipynb  S&P500_NBER-recessions.ipynb  SORR.ipynb  regime-switching-daa.ipynb
jupyter/others/: Asymmetric_correlation_Ang_Chen.ipynb  Concept_matrix_venn.ipynb  Hypothesis_testing.ipynb  SORR.ipynb  (+2 more)
services/: logging_config.py  warnings_config.py
(+56 files in other folders)
